# bevy_granite

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
assets/materials/: fence.mat  floor.mat  grass.mat  light_stone.mat  material.mat
assets/materials/internal/: default.mat  rect_brush.mat
assets/models/: 1m_Floor.mtl
assets/scenes/: dungeon.scene
crates/bevy_granite_core/: Cargo.toml
crates/bevy_granite_core/config/: versions.toml
crates/bevy_granite_core/src/: events.rs  lib.rs
crates/bevy_granite_editor/: Cargo.toml
crates/bevy_granite_editor/config/: config.toml
crates/bevy_granite_expose/: Cargo.toml
crates/bevy_granite_gizmos/: Cargo.toml
crates/bevy_granite_logging/: Cargo.toml
crates/bevy_granite_macros/: Cargo.toml
crates/bevy_granite_scene/: Cargo.toml
crates/bevy_granite_scene/src/: lib.rs  scene.rs
crates/bevy_granite_scene/src/reflect_serializer/: bevy_impls.rs  mod.rs  pure_reflect.rs
crates/bevy_granite_scene/src/reflect_serializer/human_readable/: component_serializer.rs  entity_deserializer.rs  entity_serializer.rs  mod.rs  reflect_serializer.rs
crates/bevy_granite_scene/src/reflect_serializer/pure_reflect/: enums.rs  structs.rs
crates/bevy_granite_scene/src/reflect_serializer/test/: mod.rs
crates/bevy_granite_scene/src/reflect_serializer/test/data_generation/: collections.rs  enums.rs  mod.rs  structs.rs  tuples.rs
crates/bevy_granite_scene/src/scene/: format.rs  loader.rs  mod.rs  saver.rs
examples/: brp_editor.rs  brp_server.rs  dungeon.rs  main.rs
src/: lib.rs
(+71 files in other folders)
